# Learn-CMake

./: .gitignore  README.md
Basics/: README.md
Basics/Project-1/: CMakeLists.txt  README.md
Basics/Project-2/: CMakeLists.txt  README.md
Basics/Project-2/include/: sum.hpp
Basics/Project-2/src/: sum.cpp
Basics/Project-3/: README.md
Basics/Project-3/src/: main.cpp
Basics/Project-4/: README.md
Basics/Project-4/Consume/: CMakeLists.txt  main.cpp
Basics/Project-5/: CMakeLists.txt  README.md
Basics/Project-5/Install/etc/: Project-5.conf
Basics/Project-5/include/: Math.hpp
Basics/Project-5/src/: Math.cpp  main.cpp
Basics/Project-6/: CMakeLists.txt  README.md  config.hpp.in  main.cpp
Basics/Project-6/Release/: CMakeCache.txt  Makefile  Project-6  cmake_install.cmake  config.hpp
Basics/Project-7/: CMakeLists.txt  README.md
Basics/Project-8/: CMakeLists.txt  README.md
Basics/Project-8/Library2/: CMakeLists.txt
Basics/Project-8/Library2/include/: Factorial.hpp
Basics/Project-8/test/: CMakeLists.txt  unit-test.cpp
Basics/Project-9/: CMakeLists.txt  README.md
Basics/Project-9/Doc/: myDoxy.in
Basics/Project-9/Doc/html/: account_8hpp_source.html  annotated.html  class_library_1_1_i_account-members.html  dir_3075ae0af781e00334b850778d11b533.html
Basics/Project-9/Doc/html/search/: all_1.js
Basics/Project-9/Doc/latex/: annotated.tex  class_library_1_1_i_account.eps  class_library_1_1_i_account.tex  hierarchy.tex
Practical/header-lib/: CMakeLists.txt  README.md
Practical/header-lib/include/: child.hpp  header.hpp
Project-1/: README.md
